# deephaven-rust-client

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml  config.toml.example
examples/: connect.rs  setup.rs  snapshot.rs  subscribe.rs  ticking.rs
python/: README.md  enterprise_client.py
src/: auth.rs  barrage.rs  barrage_generated.rs  console.rs  error.rs  flight.rs  lib.rs  proto.rs  rowset.rs  space_mapper.rs  subscribe.rs  table_state.rs  tls.rs
